--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,7 @@
-version: '4'
+versioin: '3'
 services:
   web:
     build: 
-      context: .
-      dockerfile: Dockerfile.dev
+      context: Dockerfile
     ports:
-      - "3000:3000"
-    volumes:
-      - /app/node_modules # this line is used to ensure we don't override node_modules dir inside the container with next volume line
-      - .:/app
-  tests:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules
-      - .:/app
-    command: ["npm", "run", "test"]
+      - '80:80'
